[gd_scene load_steps=10 format=3 uid="uid://dk7nliv1lepne"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_lq5j6"]
[ext_resource type="Texture2D" uid="uid://4kvw064hhynx" path="res://assets/Pantalla-inicio.png" id="2_81b51"]
[ext_resource type="PackedScene" uid="uid://dujhjeprh44yn" path="res://Scenes/world.tscn" id="2_j6kqn"]
[ext_resource type="Texture2D" uid="uid://cdu8nordnwuyd" path="res://assets/menu-host-bottom.png" id="2_j84ik"]
[ext_resource type="Texture2D" uid="uid://dy1iac73rkjyw" path="res://Scenes/menu-join-bottom.png" id="3_ej5ky"]
[ext_resource type="PackedScene" uid="uid://cej8kf56fhpg8" path="res://Scenes/lobby_map.tscn" id="3_x28vb"]
[ext_resource type="Texture2D" uid="uid://2oepbuna0yps" path="res://assets/menu-quit-bottom.png" id="4_4sjlt"]
[ext_resource type="AudioStream" uid="uid://85kn7htwe0kd" path="res://assets/mainmenu .wav" id="7_k0wcd"]
[ext_resource type="AudioStream" uid="uid://b4evcc4poy0l" path="res://assets/vegeta.wav" id="8_iut25"]

[node name="Main" type="Node2D"]
script = ExtResource("1_lq5j6")

[node name="background" type="Sprite2D" parent="."]
texture = ExtResource("2_81b51")
centered = false

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/player.tscn")
spawn_path = NodePath("..")

[node name="Menu" type="CanvasLayer" parent="."]

[node name="ip" type="LineEdit" parent="Menu"]
offset_left = 281.0
offset_top = 400.0
offset_right = 766.0
offset_bottom = 431.0
text = "localhost"

[node name="Host" type="TextureButton" parent="Menu"]
offset_left = 633.0
offset_top = 239.0
offset_right = 1401.0
offset_bottom = 283.0
texture_normal = ExtResource("2_j84ik")

[node name="Join" type="TextureButton" parent="Menu"]
offset_left = 632.0
offset_top = 296.0
offset_right = 1400.0
offset_bottom = 340.0
texture_normal = ExtResource("3_ej5ky")

[node name="Start" type="Button" parent="Menu"]
visible = false
offset_right = 56.0
offset_bottom = 31.0
text = "START"

[node name="Quit" type="TextureButton" parent="Menu"]
offset_left = 632.0
offset_top = 351.0
offset_right = 1400.0
offset_bottom = 395.0
texture_normal = ExtResource("4_4sjlt")

[node name="msg" type="Label" parent="Menu"]
offset_left = 48.0
offset_top = 356.0
offset_right = 607.0
offset_bottom = 379.0

[node name="World" parent="." instance=ExtResource("2_j6kqn")]
visible = false

[node name="mainMenuCamera" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(4, 4)

[node name="lobbyMap" parent="." instance=ExtResource("3_x28vb")]
visible = false
z_index = -1

[node name="won" type="CanvasLayer" parent="."]
visible = false

[node name="quitWon" type="TextureButton" parent="won"]
offset_left = 15.0
offset_top = 373.0
offset_right = 149.0
offset_bottom = 417.0
texture_normal = ExtResource("4_4sjlt")

[node name="mainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_k0wcd")
autoplay = true

[node name="vegeta" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_iut25")

[connection signal="pressed" from="Menu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="won/quitWon" to="." method="_on_quit_won_pressed"]
